examples/front-proxy/front-envoy.yaml
---
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

rate_limit_service:
  grpc_service:
    envoy_grpc:
      cluster_name: "ratelimit"
  use_data_plane_proto: true

static_resources:
  clusters:
    - connect_timeout: 0.25s
      hosts:
        - socket_address:
            address: ratelimit
            port_value: 8081
      http2_protocol_options: {}
      lb_policy: round_robin
      name: ratelimit
      type: strict_dns

    - connect_timeout: 0.25s
      hosts:
        - socket_address:
            address: service1
            port_value: 80
      http2_protocol_options: {}
      lb_policy: round_robin
      name: service1
      type: strict_dns

    - connect_timeout: 0.25s
      hosts:
        - socket_address:
            address: service2
            port_value: 80
      http2_protocol_options: {}
      lb_policy: round_robin
      name: service2
      type: strict_dns

  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - config:
                codec_type: auto
                http_filters:
                  - config:
                      domain: api
                    name: envoy.rate_limit
                  - config: {}
                    name: envoy.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - domains: ["*"]
                      name: backend
                      rate_limits:
                        - actions:
                            - remote_address: {}
                      routes:
                        - match:
                            prefix: "/service/1"
                          route:
                            cluster: service1
                        - match:
                            prefix: "/service/2"
                          route:
                            cluster: service2
                stat_prefix: ingress_http
              name: envoy.http_connection_manager
